# sgx-dcap

./: README.md
quote/quoteverify/: Cargo.toml  build_legacy.sh  pack.sh
quote/quoteverify/scripts/: prepare_sgxssl.sh
quote/quoteverify/src/: lib.rs
quote/quoteverify/testbot/: .gitignore  README.md
quote/quoteverify/testbot/app/: Cargo.toml
quote/quoteverify/testbot/app/src/: qe3.rs
quote/quoteverify/testbot/cmake/: sgx.cmake
quote/quoteverify/testbot/enclave/: .gitignore  CMakeLists.txt
quote/quoteverify/testbot/enclave/src/: ecdsa.rs
quote/quoteverify/testbot/scripts/: play.sh
quote/qv/: .gitignore  Cargo.toml  build.rs  pack.sh
quote/qv/src/: lib.rs  qve.rs
quote/qv/testbot/: CMakeLists.txt
quote/qv/testbot/app/: Cargo.toml  build.rs
quote/qv/testbot/app/src/: main.rs  qe3.rs
quote/qv/testbot/enclave/: Cargo.toml  enclave.edl
quote/qv/testbot/enclave/src/: ecall.rs  lib.rs  quote.rs
quote/qv/testbot/scripts/: renew_pccs.sh  run.sh
tools/pck-retrieval-tool/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  TODO.md
tools/pck-retrieval-tool/app/: CMakeLists.txt  Cargo.toml  build.rs
tools/pck-retrieval-tool/app/src/: codec.rs  errors.rs  main.rs  pck.rs  quote3.rs
tools/pck-retrieval-tool/cmake/: git.cmake  sgx.cmake
tools/pck-retrieval-tool/enclave/: CMakeLists.txt  Cargo.toml  enclave.edl
tools/pck-retrieval-tool/enclave/src/: lib.rs
tools/pck-retrieval-tool/scripts/: play.sh  run.sh
