[package]
name = "qv"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_urts    = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
