[workspace]
members = ["app", "enclave"]

[patch."https://github.com/apache/teaclave-sgx-sdk"]
sgx_tstd  = { git = "https://github.com/cratee-io/incubator-teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_types = { git = "https://github.com/cratee-io/incubator-teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_urts  = { git = "https://github.com/cratee-io/incubator-teaclave-sgx-sdk", rev = "v1.1.3" }
