[package]
name = "app"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
base64      = "0.13.0"
serde       = "1.0.123"
sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_urts    = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }

[build-dependencies]
cc = "1.0.50"
