[package]
name = "app"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
clap        = { version = "3.0.0-beta.1", package = "clap-v3" }
serde       = { version = "1.0.123", features = ["derive"] }
serde_json  = "1.0.62"
sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_urts    = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }

[build-dependencies]
cc = "1.0.50"
