[package]
name = "enclave"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_tstd  = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
