[package]
name = "app"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
sgx_types   = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }
sgx_urts    = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.3" }

quoteverify = { path = "../../" }

[build-dependencies]
cc = "1.0.50"
